--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ db{
       url = "jdbc:mysql://localhost:3306/game"
 //      connectionPool = disabled // for remote db
       properties = {
-        user = "game"
+        user = "root"
         password = "123456"
         characterEncoding="utf8"
       }
@@ -28,4 +28,16 @@ akka {
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 //  log-config-on-start = "on"  //for debug usage
+
+    actor {
+        db-dispatcher {
+            type = Dispatcher
+            executor = "thread-pool-executor"
+            thread-pool-executor {
+              fixed-pool-size = 8
+            }
+        }
+    }
 }
+
+
