--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+#custom 
+.cache
+logs
+
 # Ignore Gradle build output directory
 build
 gradle/
