--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,16 @@
 # https://help.github.com/articles/dealing-with-line-endings/
 #
 # These are explicitly windows files and should use crlf
-*.bat           text eol=crlf
+*.bat               text eol=crlf
 
-*.java          text eol=lf
-*.scala         text eol=lf
+*.java              text eol=lf working-tree-encoding=UTF-8
+*.scala             text eol=lf working-tree-encoding=UTF-8
+*.proto             text eol=lf working-tree-encoding=UTF-8
+
+*.sh                text eol=lf working-tree-encoding=UTF-8
+.gitattributes		text eol=lf working-tree-encoding=UTF-8
+*.conf		        text eol=lf working-tree-encoding=UTF-8
+*.yml		        text eol=lf working-tree-encoding=UTF-8
+*.txt		        text eol=lf working-tree-encoding=UTF-8
+.env		        text eol=lf working-tree-encoding=UTF-8
+Dockerfile	        text eol=lf working-tree-encoding=UTF-8
