static template data load

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,11 @@
 db{
-
   gamedb{
     profile="slick.jdbc.MySQLProfile$"
     db{
       url = "jdbc:mysql://localhost:3306/game"
 //      connectionPool = disabled // for remote db
       properties = {
-        user = "root"
+        user = "game"
         password = "123456"
         characterEncoding="utf8"
       }
@@ -20,6 +19,7 @@ gs-app {
     port = 19696
   }
   serverid=1
+  template-data-path = "conf/templateData.dat"
 }
 
 
@@ -39,5 +39,3 @@ akka {
         }
     }
 }
-
-
