修改读取模板方式

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,7 +19,7 @@ gs-app {
     port = 4396
   }
   serverid=1
-  template-data-path = "conf/templateData.dat"
+  template-data-path = "./build/resources/main/conf/templateData.dat"
 }
 
 
