template and protocol

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,10 @@ db{
   gamedb{
     profile="slick.jdbc.MySQLProfile$"
     db{
-      url = "jdbc:mysql://localhost:3306/game"
+      url = "jdbc:mysql://localhost:3306/game2"
 //      connectionPool = disabled // for remote db
       properties = {
-        user = "game"
+        user = "ly"
         password = "123456"
         characterEncoding="utf8"
       }
@@ -16,7 +16,7 @@ db{
 gs-app {
   tcp{
     hostname = "0.0.0.0"
-    port = 4396
+    port = 99
   }
   serverid=1
   template-data-path = "./build/resources/main/conf/templateData.dat"
